[gd_scene load_steps=8 format=2]

[ext_resource path="res://mike_hunt.gd" type="Script" id=1]
[ext_resource path="res://Assets/mike_hunt.png" type="Texture" id=2]
[ext_resource path="res://Assets/mike_hunt_hide_ball.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "hide",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 39.2046

[sub_resource type="CircleShape2D" id=3]
radius = 275.862

[sub_resource type="CircleShape2D" id=4]
radius = 49.0102

[node name="mike_hunt" type="KinematicBody2D"]
z_index = 1
collision_layer = 2
collision_mask = 11
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2, 3 )
scale = Vector2( 5, 5 )
frames = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="attack_box" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_box"]
shape = SubResource( 4 )

[node name="hit_timer" type="Timer" parent="."]
one_shot = true

[node name="name_tag" type="Label" parent="."]
margin_left = -16.0
margin_top = -52.0
margin_right = 16.0
margin_bottom = -38.0
text = "mike"

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="hit_timer" to="." method="_on_hit_timer_timeout"]
